--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
